--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.10
 dj-database-url==2.3.0
-Django==5.1.6
-django-allauth==65.4.1
+Django==5.1.7
+django-allauth==65.5.0
+django-countries==7.6.1
 django-crispy-forms==2.3
 pillow==11.1.0
 sqlparse==0.5.3
+stripe==11.6.0
 whitenoise==6.9.0
