--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.8.1
+boto3==1.37.25
+botocore==1.37.25
 crispy-bootstrap4==2024.10
 dj-database-url==2.3.0
 Django==5.1.7
 django-allauth==65.5.0
 django-countries==7.6.1
 django-crispy-forms==2.3
+django-storages==1.14.6
+jmespath==1.0.1
 pillow==11.1.0
+s3transfer==0.11.4
 sqlparse==0.5.3
 stripe==11.6.0
 whitenoise==6.9.0
