--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ django-allauth==65.5.0
 django-countries==7.6.1
 django-crispy-forms==2.3
 django-storages==1.14.6
+gunicorn==23.0.0
 jmespath==1.0.1
 pillow==11.1.0
+python-dotenv==1.1.0
 s3transfer==0.11.4
 sqlparse==0.5.3
 stripe==11.6.0
