--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-storages==1.14.6
 gunicorn==23.0.0
 jmespath==1.0.1
 pillow==11.1.0
+psycopg2==2.9.10
 python-dotenv==1.1.0
 s3transfer==0.11.4
 sqlparse==0.5.3
